--- a/package.json
+++ b/package.json
@@ -4,21 +4,16 @@
 	"libraryTarget": "umd",
 	"globalObject": "this",
 	"entryDir": "src",
-	"entryName": "index.js",
+	"entryName": "index.ts",
 	"childDirList": [
 		"ui",
 		"utils"
 	],
 	"uiName": "ui",
 	"uiPrefix": "$",
-	"alias": {
-		"@ui": "src/ui",
-		"@utils": "src/utils"
-	},
-	"aliasPrefix": "@",
 	"outputDir": "dist",
 	"main": "dist/s2w-js-min.js",
-	"buildDate": "2022-10-15 16:00:44",
+	"buildDate": "2022-10-15 18:49:02",
 	"version": "1.0.5",
 	"date": "2022-10-15 16:00:44",
 	"versionLists": [
@@ -62,6 +57,8 @@
 		"babel-loader": "^8.2.5",
 		"html-webpack-plugin": "^5.5.0",
 		"minimist": "^1.2.7",
+		"ts-loader": "^9.4.1",
+		"typescript": "^4.8.4",
 		"webpack": "^5.74.0",
 		"webpack-cli": "^4.10.0",
 		"webpack-dev-server": "^4.11.1"
@@ -69,7 +66,7 @@
 	"dependencies": {
 		"moment": "^2.29.4"
 	},
-	"mode": "production",
+	"mode": "development",
 	"outputName": "s2w-js-min.js",
 	"files": [
 		"dist"
