--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
 	"uiName": "ui",
 	"uiPrefix": "$",
 	"outputDir": "dist",
-	"types": "index.d.ts",
-	"buildDate": "2022-10-16 05:04:00",
+	"types": "dist",
+	"buildDate": "2022-10-23 04:32:20",
 	"version": "1.0.8",
 	"date": "2022-10-15 22:45:46",
 	"versionLists": [
@@ -40,7 +40,7 @@
 	"description": "Library based on raw JavaScript",
 	"descriptionCN": "基于原生JavaScript的库",
 	"scripts": {
-		"build": "node ./package-script.js --mode=development && webpack",
+		"build": "node ./package-script.js --mode=production && webpack",
 		"build-small": "node ./package-script.js --mode=production --type=small && webpack",
 		"build-middle": "node ./package-script.js --mode=production --type=middle && webpack",
 		"build-large": "node ./package-script.js --mode=production --type=large  && webpack",
@@ -63,6 +63,7 @@
 		"@babel/preset-env": "^7.19.4",
 		"@types/jquery": "^3.5.14",
 		"babel-loader": "^8.2.5",
+		"babel-plugin-transform-es3-property-literals": "^6.22.0",
 		"html-webpack-plugin": "^5.5.0",
 		"minimist": "^1.2.7",
 		"ts-loader": "^9.4.1",
@@ -74,7 +75,7 @@
 	"dependencies": {
 		"moment": "^2.29.4"
 	},
-	"mode": "development",
+	"mode": "production",
 	"outputName": "s2w-js-min.js",
 	"files": [
 		"dist",
