--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 	"uiPrefix": "$",
 	"outputDir": "dist",
 	"types": "dist",
-	"buildDate": "2022-10-23 04:32:20",
+	"buildDate": "2022-10-23 05:24:04",
 	"version": "1.0.8",
 	"date": "2022-10-15 22:45:46",
 	"versionLists": [
@@ -59,11 +59,11 @@
 	"license": "ISC",
 	"devDependencies": {
 		"@babel/core": "^7.19.3",
+		"@babel/plugin-transform-reserved-words": "^7.18.6",
 		"@babel/plugin-transform-runtime": "^7.19.1",
 		"@babel/preset-env": "^7.19.4",
 		"@types/jquery": "^3.5.14",
 		"babel-loader": "^8.2.5",
-		"babel-plugin-transform-es3-property-literals": "^6.22.0",
 		"html-webpack-plugin": "^5.5.0",
 		"minimist": "^1.2.7",
 		"ts-loader": "^9.4.1",
@@ -79,7 +79,7 @@
 	"outputName": "s2w-js-min.js",
 	"files": [
 		"dist",
-		"index.d.ts"
+		"dist"
 	],
 	"main": "dist/s2w-js-min.js"
 }
